--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
-@use './scss/card';
+@use './scss/desktop';
+@use './scss/mobile';
 
 $Dark-cyan: hsl(158, 36%, 37%);
 $Cream: hsl(30, 38%, 92%);
@@ -7,22 +8,27 @@ $Very-dark-blue: hsl(212, 21%, 14%);
 $Dark-grayish-blue: hsl(228, 12%, 48%);
 $White: hsl(0, 0%, 100%);
 
-// font-family: 'Fraunces', serif;
-// font-family: 'Montserrat', sans-serif;
 $faunces: 'Fraunces';
 $montserrat: 'Montseraat';
 
 body, html {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: $Cream;
   font-family: $faunces;
   font-size: 14px;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-content: center;
-  
+  align-items: center;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: $Cream;
 }
